Hinzufügen von Kunden implementiert

--- a/src/app/core/components/navigation/navigation.component.html
+++ b/src/app/core/components/navigation/navigation.component.html
@@ -24,7 +24,7 @@
         </li>
 
         <li class="border-t border-b border-sky-100 py-4 px-4 hover:bg-sky-100 transition cursor-pointer flex items-center">
-            <a href="/stammdaten" class="flex items-center transition-all duration-300 ease-in-out" [ngClass]="{'justify-start': isNavOpen, 'justify-center': !isNavOpen}">
+            <a href="/kunden" class="flex items-center transition-all duration-300 ease-in-out" [ngClass]="{'justify-start': isNavOpen, 'justify-center': !isNavOpen}">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" 
                     class="size-8">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125" />
@@ -32,7 +32,7 @@
                 
                 <span class="overflow-hidden transition-all duration-300 ease-in-out" 
                     [ngClass]="{'opacity-100 pl-4 w-auto': isNavOpen, 'opacity-0 w-0': !isNavOpen}">
-                    Stammdaten
+                    Kunden
                 </span>
             </a>
         </li>
