--- a/src/app/customers/components/create-customer/create-customer.component.html
+++ b/src/app/customers/components/create-customer/create-customer.component.html
@@ -58,7 +58,7 @@
 
         <p-fieldset legend="Sonstiges" [toggleable]="true" class="mt-4">
             <p-floatlabel variant="on" class="mt-4">
-                <textarea id="text" rows="5"cols="85" pTextarea></textarea>
+                <textarea id="text" rows="5"cols="85" pTextarea formControlName="text"></textarea>
                 <label for="text">Bemerkungen</label>
             </p-floatlabel>
         </p-fieldset>
