Firebase Backend für Customer CR Funktionen

--- a/src/app/customers/components/create-customer/create-customer.component.html
+++ b/src/app/customers/components/create-customer/create-customer.component.html
@@ -3,8 +3,8 @@
     <form [formGroup]="createCustomerForm" class="flex flex-col m-4 mt-2 gap">
         <!-- Kundennummer -->
         <p-floatLabel variant="on" class="mt-4">
-            <input id="id" pInputText formControlName="id">
-            <label for="id">Kundennummer</label>
+            <input id="number" pInputText formControlName="number">
+            <label for="number">Kundennummer</label>
         </p-floatLabel>
 
         <!-- Stammdaten -->
