--- a/src/app/core/components/navigation/navigation.component.html
+++ b/src/app/core/components/navigation/navigation.component.html
@@ -1,8 +1,8 @@
-<nav [ngClass]="{'w-64': isNavOpen, 'w-16': !isNavOpen}" class="border-r border-sky-300 bg-sky-50 flex-1 min-h-full transition-all duration-300 ease-in-out rounded-r-xs drop-shadow-xl">
+<nav [ngClass]="{'w-64': isNavOpen, 'w-16': !isNavOpen}" class="border-r border-sky-300 bg-sky-100 flex-1 min-h-full transition-all duration-300 ease-in-out rounded-r-xs drop-shadow-xl">
     
     <!-- Navigation Button -->
     <button id="navButton" (click)="toggleNav()" 
-        class="flex flex-col justify-center items-center py-4 w-full hover:bg-sky-100 transition cursor-pointer rounded-tr-xs">
+        class="flex flex-col justify-center items-center py-4 w-full hover:bg-sky-200/40 transition cursor-pointer rounded-tr-xs">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
@@ -10,7 +10,7 @@
 
     <!-- Navigation Link -->
     <ul>
-        <li class="border-t border-b border-sky-100 py-4 px-4 hover:bg-sky-100 transition cursor-pointer flex items-center">
+        <li class="border-t border-b border-sky-200/40 py-4 px-4 hover:bg-sky-200/40 transition cursor-pointer flex items-center">
             <a routerLink="/" class="flex items-center transition-all duration-300 ease-in-out" [ngClass]="{'justify-start': isNavOpen, 'justify-center': !isNavOpen}">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
@@ -23,7 +23,7 @@
             </a>
         </li>
 
-        <li class="border-t border-b border-sky-100 py-4 px-4 hover:bg-sky-100 transition cursor-pointer flex items-center">
+        <li class="border-t border-b border-sky-200/40 py-4 px-4 hover:bg-sky-200/40 transition cursor-pointer flex items-center">
             <a routerLink="/kunden" class="flex items-center transition-all duration-300 ease-in-out" [ngClass]="{'justify-start': isNavOpen, 'justify-center': !isNavOpen}">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" 
                     class="size-8">
@@ -37,7 +37,7 @@
             </a>
         </li>
 
-        <li class="border-t border-b border-sky-100 py-4 px-4 hover:bg-sky-100 transition cursor-pointer flex items-center">
+        <li class="border-t border-b border-sky-200/40 py-4 px-4 hover:bg-sky-200/40 transition cursor-pointer flex items-center">
             <a routerLink="/produkte" class="flex flex-row items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" 
                     class="size-8">
