--- a/src/app/core/components/navigation/navigation.component.html
+++ b/src/app/core/components/navigation/navigation.component.html
@@ -10,8 +10,8 @@
 
     <!-- Navigation Link -->
     <ul>
-        <li class="border-t border-b border-sky-200/40 py-4 px-4 hover:bg-sky-200/40 transition cursor-pointer flex items-center">
-            <a routerLink="/" class="flex items-center transition-all duration-300 ease-in-out" [ngClass]="{'justify-start': isNavOpen, 'justify-center': !isNavOpen}">
+        <li routerLink="/" class="border-t border-b border-sky-200/40 py-4 px-4 hover:bg-sky-200/40 transition cursor-pointer flex items-center">
+            <a class="flex items-center transition-all duration-300 ease-in-out" [ngClass]="{'justify-start': isNavOpen, 'justify-center': !isNavOpen}">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
                 </svg>
@@ -23,8 +23,8 @@
             </a>
         </li>
 
-        <li class="border-t border-b border-sky-200/40 py-4 px-4 hover:bg-sky-200/40 transition cursor-pointer flex items-center">
-            <a routerLink="/kunden" class="flex items-center transition-all duration-300 ease-in-out" [ngClass]="{'justify-start': isNavOpen, 'justify-center': !isNavOpen}">
+        <li routerLink="/kunden" class="border-t border-b border-sky-200/40 py-4 px-4 hover:bg-sky-200/40 transition cursor-pointer flex items-center">
+            <a class="flex items-center transition-all duration-300 ease-in-out" [ngClass]="{'justify-start': isNavOpen, 'justify-center': !isNavOpen}">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" 
                     class="size-8">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125" />
@@ -37,8 +37,8 @@
             </a>
         </li>
 
-        <li class="border-t border-b border-sky-200/40 py-4 px-4 hover:bg-sky-200/40 transition cursor-pointer flex items-center">
-            <a routerLink="/produkte" class="flex flex-row items-center">
+        <li routerLink="/produkte" class="border-t border-b border-sky-200/40 py-4 px-4 hover:bg-sky-200/40 transition cursor-pointer flex items-center">
+            <a class="flex flex-row items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" 
                     class="size-8">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z" />
