--- a/src/app/customers/components/create-customer/create-customer.component.html
+++ b/src/app/customers/components/create-customer/create-customer.component.html
@@ -71,7 +71,7 @@
             <div class="flex flex-row-reverse gap-4">
                 <p-button label="Speichern" [raised]="true" severity="success" [disabled]="!this.createCustomerForm.valid" (click)="this.addCustomer(createCustomerForm.getRawValue())"/>
                 <p-button label="Zwischnspeichern" variant="outlined" severity="success" />
-                <p-button label="Clear" variant="outlined" severity="danger" />
+                <p-button label="Clear" variant="outlined" severity="danger" (click)="this.clearForm()"/>
             </div>
         </div>
 
