Produkt-ID -> Artikelnummer

--- a/src/app/products/components/create-product/create-product.component.html
+++ b/src/app/products/components/create-product/create-product.component.html
@@ -3,8 +3,8 @@
     <form [formGroup]="createProductForm" class="flex flex-col m-4 mt-2 gap">
         <!-- Product-ID -->
         <p-floatLabel variant="on" class="mt-4">
-            <input id="productId" pInputText formControlName="productId">
-            <label for="productId">Product-ID</label>
+            <input id="articleNumber" pInputText formControlName="articleNumber">
+            <label for="articleNumber">Artikelnummer</label>
         </p-floatLabel>
 
         <!-- Produktdaten -->
