--- a/src/app/core/components/navigation/navigation.component.html
+++ b/src/app/core/components/navigation/navigation.component.html
@@ -51,5 +51,21 @@
             </a>
         </li>
 
+        <li routerLink="/vorgaenge" class="border-t border-b border-sky-200/40 py-4 px-4 hover:bg-sky-200/40 transition cursor-pointer flex items-center">
+            <a class="flex flex-row items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                    class="size-8">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12.75V12A2.25 2.25 0 0 1 4.5 9.75h15A2.25 2.25 0 0 1 21.75 12v.75m-8.69-6.44-2.12-2.12a1.5 1.5 0 0 0-1.061-.44H4.5A2.25 2.25 0 0 0 2.25 6v12a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18V9a2.25 2.25 0 0 0-2.25-2.25h-5.379a1.5 1.5 0 0 1-1.06-.44Z" />
+                </svg>
+                  
+
+                <span class="overflow-hidden transition-all duration-300 ease-in-out" 
+                    [ngClass]="{'opacity-100 pl-4 w-auto': isNavOpen, 'opacity-0 w-0': !isNavOpen}">
+                    Vorgänge
+                </span>
+            </a>
+        </li>
+
     </ul>
 </nav>
+  
