--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,9 +1,11 @@
-<div class="h-screen flex flex-col">
-    <app-header></app-header>
-    <div class="flex flex-row flex-1">
-        <app-navigation></app-navigation>
-        <div class="flex-1">
-            <router-outlet></router-outlet>
+@if (showLayout) {
+    <div class="h-screen flex flex-col">
+        <app-header></app-header>
+        <div class="flex flex-row flex-1">
+            <app-navigation></app-navigation>
+            <div class="flex-1">
+                <router-outlet></router-outlet>
+            </div>
         </div>
     </div>
-</div>
+}
