--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -1,4 +1,5 @@
 <div class="flex flex-row justify-center items-center">
+    <p-button icon="pi pi-arrow-left" label="Zurück" severity="info" (click)="this.navigateToList()"/>
 
     <form [formGroup]="createProductForm" class="flex flex-col m-4 mt-2 gap">
         <!-- Product-ID -->
