--- a/src/app/products/components/products/products.component.html
+++ b/src/app/products/components/products/products.component.html
@@ -14,7 +14,7 @@
                 </p-iconfield>
                 <p-splitbutton label="Aktion auswählen" [model]="[{ label: 'Vorgang erstellen', icon: 'pi pi-folder-open' }, { label: 'Angebot erstellen', icon:'pi pi-file' }]" size="small" outlined severity="info"/>
                 <p-button (click)="'console.log(noch nichts eingefügt)'" label="Löschen" icon="pi pi-trash" size="small" severity="danger"/>
-                <p-button (click)="this.productsService.addProductDialog()" label="Hinzufügen" icon="pi pi-plus" size="small" severity="info"/>
+                <p-button (click)="this.productsService.addProduct()" label="Hinzufügen" icon="pi pi-plus" size="small" severity="info"/>
             </div>      
         </div>
     
@@ -23,9 +23,3 @@
             <app-data-table [data]="this.products" [columns]="tablePropertys" [openData]="openProduct.bind(this)" />
         </div>
     </div>
-
-@if (this.productsService.showProductsDialog()) {
-    <p-dialog header="Kunden Details" [modal]="true" [resizable]="true" [maximizable]="true" [(visible)]="this.productsService.showProductsDialog" [style]="{ minWidth: '48rem' }">
-        <app-create-product />
-    </p-dialog>
-}
